--- a/Hello.html
+++ b/Hello.html
@@ -5,6 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h1{
+            color: red;
+        }
+        h2{
+            color: green;
+        }
+        h3{
+            color: blue;
+        }
+    </style>
 </head>
 <body>
     <h1>Hello Yaseen Khan!</h1>
